--- a/src/components/GameButton.module.css
+++ b/src/components/GameButton.module.css
@@ -4,7 +4,7 @@
   border-radius: 16px;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 24px;
-  gap: 16px;
+  gap: 24px;
   width: 400px;
   margin-top: 24px;
 }
@@ -23,6 +23,10 @@
   height: 20px;
   border-radius: 3px;
   background-color: #0256c9;
+}
+
+.icon {
+  width: 50px;
 }
 
 .mainText {
